# cme-futures-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cme_futures_mcp/: __init__.py  contracts.py  data_access.py  paths.py  serialization.py  server.py  storage.py
tests/: conftest.py  test_data_access.py  test_serialization.py  test_server.py
tools/: sync_from_monorepo.py
